--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -134,28 +134,40 @@ h2 {
 
 #courses {
     position: relative;
+    padding-bottom: 5px;
 }
 
 #particles-js {
-    height: 100vh;
-    background-color: #bad5f599;
-}
-
-/* #particles-js, */
-.course-container {
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    right: 0;
+    bottom: 0;
+    display: block;
+    z-index: 0;
+}
+
+.course-container h2 {
+    position: relative;
+    z-index: 1;
+}
+
+.particles-js-canvas-el {
+    background-color: #bad5f599;
 }
 
 .course-wrap {
+    position: relative;
+    z-index: 1;
     margin: 0 auto;
     display: flex;
     max-width: 1100px;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    margin-bottom: 50px;
 }
 
 .course {
